--- a/Resources/iOS/VLC.entitlements
+++ b/Resources/iOS/VLC.entitlements
@@ -2,29 +2,36 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.developer.carplay-audio</key>
-	<true/>
+<!--	<key>com.apple.developer.carplay-audio</key>-->
+<!--	<false/>-->
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.$(CFBundleIdentifier)</string>
+		<string>iCloud.--BUNDLE-IDENTIFIER-PREFIX-.vlc.photo.ios</string>
+		<string>iCloud.com.MR.Account</string>
+		<string>iCloud.fk.text.com</string>
+		<string>iCloud.fk.com.vlc-ios</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
 		<string>CloudDocuments</string>
 	</array>
-	<key>com.apple.developer.networking.multicast</key>
-	<true/>
+<!--	<key>com.apple.developer.networking.multicast</key>-->
+<!--	<true/>-->
 	<key>com.apple.developer.siri</key>
 	<true/>
 	<key>com.apple.developer.ubiquity-container-identifiers</key>
 	<array>
-		<string>iCloud.$(CFBundleIdentifier)</string>
+		<string>iCloud.--BUNDLE-IDENTIFIER-PREFIX-.vlc.photo.ios</string>
+		<string>iCloud.com.MR.Account</string>
+		<string>iCloud.fk.text.com</string>
+		<string>iCloud.fk.com.vlc-ios</string>
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>$(GROUP_IDENTIFIER)</string>
+		<string>group.fk.com.vlc.ios</string>
+		<string>group.fk.com.vlc-ios</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
